# autolab

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.codex/skills/autolab/: SKILL.md
.codex/skills/llm-council/: SKILL.md
.codex/skills/parallel-task/: SKILL.md
.codex/skills/swarm-planner/: SKILL.md
.githooks/: post-commit  pre-commit  pre-push
.github/workflows/: ci.yml  golden.yml  release.yml
council_runs/autolab_tui_review_20260301/: final-plan.md  judge.md  planner_1.md  planner_3.md  run_summary.json  task_brief.md
council_runs/autolab_tui_review_20260301/judge_inputs/: candidate_3.md
council_runs/autolab_tui_wave2_review_20260301/: candidate_1.md  candidate_2.md  candidate_3.md  final-plan.md  judge.md  planner_1.md  planner_2.md  planner_3.md  randomized_order.txt  run_summary.json  task_brief.md
docs/: artifact_contracts.md  prompt_authoring_guide.md  prompt_token_reference.md  quickstart.md  runner_reference.md  slurm_cookbook.md  tui_cockpit.md  workflow_modes.md  workflow_registry_policy.md
docs/skills/: README.md
docs/skills/autolab/: SKILL.md
dotautolab/.autolab/: experiment_file_line_limits.yaml  verifier_policy.yaml
dotautolab/.autolab/prompts/: stage_decide_repeat.md  stage_design.md  stage_docs.md  stage_extract.md  stage_extract_results.md  stage_hypothesis.md  stage_implementation.md  stage_implementation_review.md  stage_launch.md  stage_update_docs.md
dotautolab/.autolab/prompts/shared/: checklist.md  guardrails.md  line_limits.md  repo_scope.md  runtime_context.md
dotautolab/.autolab/schemas/: design.schema.json  metrics.schema.json  run_manifest.schema.json  state.schema.json
dotautolab/.autolab/verifiers/: closed_experiment_guard.py  docs_targets.py  prompt_lint.py  result_sanity.py  run_health.py  schema_checks.py  template_fill.py
examples/golden_iteration/: README.md
examples/golden_iteration/.autolab/: backlog.yaml
examples/golden_iteration/paper/: results.md
experiments/plan/iter1/verification/: design_registry_consistency.json  design_schema_checks.json  design_template_fill.json
experiments/plan/iter_golden/verification/: decide_repeat_consistency_checks.json  (+40 more)
scripts/: bump_version.py  changelog.py  check_style.sh  install-hooks.sh  sync_docs.sh  sync_release_tags.py
src/autolab/: __init__.py  __main__.py  agent_surface.py  brownfield_bootstrap.py  campaign.py  checkpoint.py  checkpoint_hook.py  commands.py  config.py  constants.py  dataset_discovery.py  design_context_quality.py  errors.py  evaluate.py  extract_runtime.py  gc.py  handoff.py  launch_runtime.py  models.py  oracle_runtime.py  parser_capabilities.py  plan_approval.py  plan_contract.py  plan_execution.py  policy_resolution.py  prompts.py  registry.py  remote_profiles.py  render_debug.py  run_assistant.py  run_standard.py  runners.py  scope.py  sidecar_context.py  sidecar_tools.py  slurm_job_list.py  state.py  todo_sync.py  traceability.py  uat.py  (+4 more)
src/autolab/cli/: __init__.py  app.py  handlers_admin.py  handlers_backlog.py  handlers_campaign.py  handlers_checkpoint.py  handlers_gc.py  handlers_observe.py  handlers_parser.py  handlers_project.py  handlers_run.py  parser.py  registry.py  support.py
src/autolab/example_brownfield_canary/: README.md
src/autolab/example_golden_iterations/: README.md
src/autolab/orchestration/: __init__.py  assistant_runtime.py  decision.py  engine.py  failure.py  launch.py  models.py  standard_runtime.py  transition.py  verification.py
src/autolab/tui/: __init__.py  actions.py  app.py  models.py  preview_render.py  runner.py  snapshot.py
tests/: conftest.py  test_assistant_e2e.py  test_brownfield_bootstrap.py  test_brownfield_canary_integration.py  test_bump_version_script.py  test_campaign_command.py  test_changelog_script.py  test_checkpoint.py  test_commands_smoke.py  test_commands_tui.py  test_config.py  test_dataset_discovery.py  test_design_context_quality.py  test_extract_runtime.py  test_focus_todo_experiment_move.py  test_gc_command.py  test_golden_iteration_integration.py  test_golden_verifiers_ci.py  test_guardrails.py  test_install_skill_command.py  test_launch_runtime.py  test_llm_artifact_robustness.py  test_multi_device.py  test_oracle_command.py  test_orchestration_engine.py  test_parser_sdk.py  test_pipeline_coverage.py  test_plan_approval_surfaces.py  test_plan_contract.py  test_plan_execution.py  test_policy_presets.py  test_policy_resolution.py  test_prompt_token_reference.py  test_prompts.py  test_registry.py  test_release_workflow_changelog.py  test_remote_cli_handlers.py  test_remote_launch_runtime.py  test_remote_profiles.py  test_render_command.py  (+27 more)
(+221 files in other folders)
