[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "autolab"
version = "1.1.46"
description = "Shared autolab CLI package for workflow orchestration"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["autolab", "workflow", "experiment", "orchestration"]
dependencies = [
  "PyYAML>=6",
  "jsonschema>=4.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff>=0.15.0",
  "mdformat>=1.0.0",
  "yamlfix>=1.19.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
autolab = "autolab.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autolab = [
  "scaffold/.autolab/experiment_file_line_limits.yaml",
  "scaffold/.autolab/workflow.yaml",
  "scaffold/.autolab/verifier_policy.yaml",
  "scaffold/.autolab/prompts/*.md",
  "scaffold/.autolab/prompts/shared/*.md",
  "scaffold/.autolab/prompts/shared/.gitkeep",
  "scaffold/.autolab/policy/*.yaml",
  "scaffold/.autolab/schemas/*.json",
  "scaffold/.autolab/verifiers/*.py",
  "skills/*/*/*.md",
  "golden_iteration/README.md",
  "golden_iteration/.autolab/*.yaml",
  "golden_iteration/.autolab/*.json",
  "golden_iteration/experiments/plan/iter_golden/*.md",
  "golden_iteration/experiments/plan/iter_golden/*.json",
  "golden_iteration/experiments/plan/iter_golden/*.yaml",
  "golden_iteration/experiments/plan/iter_golden/analysis/*.md",
  "golden_iteration/experiments/plan/iter_golden/launch/*.sh",
  "golden_iteration/experiments/plan/iter_golden/launch/*.sbatch",
  "golden_iteration/experiments/plan/iter_golden/runs/*/*.json",
  "golden_iteration/paper/*.md",
]
